fixed spacing.

--- a/app/assets/stylesheets/question-styles.css.scss
+++ b/app/assets/stylesheets/question-styles.css.scss
@@ -10,6 +10,9 @@
   .invisible {
     visibility: hidden;
   }
+  .hidden-field {
+    display: none;
+  }
 
   .votes {
     padding-top: 3em;
@@ -17,6 +20,7 @@
     height: 100%;
     width: 5%;
     text-align: center;
+    margin-left: -2px;
 
     .upvote,
     .downvote {
@@ -62,7 +66,7 @@
           font-size: 15px;
           font-weight: 600;
           text-align: left;
-          padding-left: 1em;
+          padding-left: 5px;
           width: 15em;
           height: 5em;
           color: white;
@@ -77,7 +81,7 @@
           font-size: 14px;
           padding-top: 4em;
           color: white;
-          margin-left: -5em;
+          margin-left: -6em;
 
           div {
             display: inline-block;
